--- a/material-components-flutter-codelabs-101-starter/mdc_100_series/pubspec.yaml
+++ b/material-components-flutter-codelabs-101-starter/mdc_100_series/pubspec.yaml
@@ -23,41 +23,42 @@ flutter:
   assets:
     - assets/logo.png
     # TODO: Add slanted menu asset (104)
-    - packages/shrine_images/0-0.jpg
-    - packages/shrine_images/1-0.jpg
-    - packages/shrine_images/2-0.jpg
-    - packages/shrine_images/3-0.jpg
-    - packages/shrine_images/4-0.jpg
-    - packages/shrine_images/5-0.jpg
-    - packages/shrine_images/6-0.jpg
-    - packages/shrine_images/7-0.jpg
-    - packages/shrine_images/8-0.jpg
-    - packages/shrine_images/9-0.jpg
-    - packages/shrine_images/10-0.jpg
-    - packages/shrine_images/11-0.jpg
-    - packages/shrine_images/12-0.jpg
-    - packages/shrine_images/13-0.jpg
-    - packages/shrine_images/14-0.jpg
-    - packages/shrine_images/15-0.jpg
-    - packages/shrine_images/16-0.jpg
-    - packages/shrine_images/17-0.jpg
-    - packages/shrine_images/18-0.jpg
-    - packages/shrine_images/19-0.jpg
-    - packages/shrine_images/20-0.jpg
-    - packages/shrine_images/21-0.jpg
-    - packages/shrine_images/22-0.jpg
-    - packages/shrine_images/23-0.jpg
-    - packages/shrine_images/24-0.jpg
-    - packages/shrine_images/25-0.jpg
-    - packages/shrine_images/26-0.jpg
-    - packages/shrine_images/27-0.jpg
-    - packages/shrine_images/28-0.jpg
-    - packages/shrine_images/29-0.jpg
-    - packages/shrine_images/30-0.jpg
-    - packages/shrine_images/31-0.jpg
-    - packages/shrine_images/32-0.jpg
-    - packages/shrine_images/33-0.jpg
-    - packages/shrine_images/34-0.jpg
-    - packages/shrine_images/35-0.jpg
-    - packages/shrine_images/36-0.jpg
-    - packages/shrine_images/37-0.jpg
+    - assets/Buket Mawar Merah Classic.jpg
+    - assets/Buket Mawar Pink.jpg
+    - assets/Buket Mawar Biru Premium.jpg
+    - assets/Buket Tulip Mix.jpg
+    - assets/Buket Lili Putih.jpg
+    - assets/Buket Anggrek Ungu.jpg
+    - assets/Bunga Gerbera Colorful.jpg
+    - assets/Buket Mix Rose & Babys Breath.jpg
+    - assets/Buket Bunga Anyelir.jpg
+    - assets/Buket Calla Lily Putih.jpg
+    - assets/Buket Hydrangea Biru.jpg
+    - assets/Buket Daisy Putih Manis.jpg
+    - assets/Peony Pink.jpg
+    - assets/Buket Mix Sunflower & Krisan.jpg
+    - assets/Lily Oriental.jpg
+    - assets/Bunga Dahlia.jpg
+    - assets/Lavender.jpg
+    - assets/Alamanda.jpg
+    - assets/Frangipani.jpg
+    - assets/Amaryllis.jpg
+    - assets/Ranunculus.jpg
+    - assets/Freesia.jpg
+    - assets/Scabiosa.jpg
+    - assets/Calla Lily.jpg
+    - assets/Delphinium.jpg
+    - assets/Bunga Matahari.jpg
+    - assets/Cornflower.jpg
+    - assets/Sweet Pea.jpg
+    - assets/Gardenia.jpg
+    - assets/Protea.jpg
+    - assets/Lupin.jpg
+    - assets/Strelitzia.jpg
+    - assets/Wedding Buket.jpg
+    - assets/Mawar Pink.jpg
+    - assets/Bunga Scilla.jpg
+    - assets/Bunga Astilbe.jpg
+    - assets/Lily.jpg
+    - assets/Mawar Putih.jpg
+    
