--- a/material-components-flutter-codelabs-101-starter/mdc_100_series/pubspec.yaml
+++ b/material-components-flutter-codelabs-101-starter/mdc_100_series/pubspec.yaml
@@ -20,6 +20,7 @@ dev_dependencies:
 flutter:
   # TODO: Insert Fonts (103)
   uses-material-design: true
+
   assets:
     - assets/logo.png
     # TODO: Add slanted menu asset (104)
@@ -61,4 +62,12 @@ flutter:
     - assets/Bunga Astilbe.jpg
     - assets/Lily.jpg
     - assets/Mawar Putih.jpg
+
+  fonts:
+    - family: Rubik
+      fonts:
+        - asset: fonts/Rubik-Regular.ttf
+        - asset: fonts/Rubik-Medium.ttf
+          weight: 500
+
     
